--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  freezed_annotation: ^3.1.0
+  http: ^1.6.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
+  build_runner: ^2.10.3
+  freezed: ^3.2.3
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  json_serializable: ^6.11.1
 
 flutter:
   uses-material-design: true
