--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.6.1
   freezed_annotation: ^3.1.0
   http: ^1.6.0
   json_annotation: ^4.9.0
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   build_runner: ^2.10.3
@@ -20,6 +22,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   json_serializable: ^6.11.1
+  custom_lint: ^0.8.1
 
 flutter:
   uses-material-design: true
