--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,20 +9,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.6.1
+  flutter_riverpod:
   freezed_annotation: ^3.1.0
   http: ^1.6.0
   json_annotation: ^4.9.0
-  riverpod_annotation: ^2.6.1
+  riverpod_annotation: ^3.0.3
 
 dev_dependencies:
-  build_runner: ^2.10.3
+  build_runner: ^2.4.6
   freezed: ^3.2.3
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints:
   json_serializable: ^6.11.1
-  custom_lint: ^0.8.1
+  custom_lint:
+  riverpod_generator: ^3.0.3
 
 flutter:
   uses-material-design: true
