--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   firebase_core: ^4.2.1
   flutter:
     sdk: flutter
+  flutter_datetime_picker_plus: ^2.2.0
   flutter_riverpod:
   freezed_annotation: ^3.1.0
   http: ^1.6.0
