--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_datetime_picker_plus: ^2.2.0
+  flutter_hooks: ^0.21.3+1
   flutter_riverpod:
   freezed_annotation: ^3.1.0
   http: ^1.6.0
